syntax = "proto3";

package proto;

option go_package = "/proto";

service AuthService {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc CheckToken(CheckTokenRequest) returns (CheckTokenResponse);
}

message CreateUserRequest {
  string username = 1;
  string password = 2;
}

message CreateUserResponse {
  string token = 1;
  string error_message = 2;
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
  string error_message = 2;
}

message CheckTokenRequest {
  string token = 1;
}

message CheckTokenResponse {
  string id = 1;
  string error_message = 2;
}
